Fixed an issue where line numbers are shifted under IE7 when fallback by image.

--- a/pbList/scss/03_fallback.scss
+++ b/pbList/scss/03_fallback.scss
@@ -46,6 +46,7 @@
         /* 親の text-align:right で text-indent:-21px 出来ないテキストを消す */
         /* //_{#ie7-win */
             text-align     : left;
+            vertical-align : top; /* この指定が無いと下にズレる */
         /* //_}#ie7-win */
         }
         .pbList-noWebFont .pbCmd font
